--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <section id="about">
         <h1>About</h1>
-        <p>Currently Enrolled in the Commonwealth Ciders Web Development Program</p>
+        <p>Currently Enrolled in the Commonwealth Coders Web Development 16 week bootcamp Program</p>
         <h2>Follow me on Social Media</h2>
         <div>
             <a href="https://twitter.com/CodeSurferGuy">
